--- a/Unlisted/OlympicPy-unlisted.ipynb
+++ b/Unlisted/OlympicPy-unlisted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4  27:02.77  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "'https://api.openweathermap.org/data/2.5/weather?appid=766b1bd3b75d4bbff2efc167fdb36379&units=metric&q='"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,12 +211,13 @@
     "    response = requests.get(query_url + city).json()\n",
     "    temp.append(response['main']['temp'])\n",
     "    lat.append(response['coord']['lat'])\n",
+    "    long.append(response['coord']['lon'])\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -242,6 +243,7 @@
        "      <th></th>\n",
        "      <th>city</th>\n",
        "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
        "      <th>temp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -250,158 +252,179 @@
        "      <th>0</th>\n",
        "      <td>London</td>\n",
        "      <td>51.5085</td>\n",
-       "      <td>5.31</td>\n",
+       "      <td>-0.1257</td>\n",
+       "      <td>5.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Rio</td>\n",
        "      <td>38.3000</td>\n",
-       "      <td>9.63</td>\n",
+       "      <td>21.7833</td>\n",
+       "      <td>8.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Beijing</td>\n",
        "      <td>39.9075</td>\n",
-       "      <td>2.94</td>\n",
+       "      <td>116.3972</td>\n",
+       "      <td>5.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Sydney</td>\n",
        "      <td>-33.8679</td>\n",
-       "      <td>29.83</td>\n",
+       "      <td>151.2073</td>\n",
+       "      <td>30.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Barcelona</td>\n",
        "      <td>41.3888</td>\n",
-       "      <td>10.76</td>\n",
+       "      <td>2.1590</td>\n",
+       "      <td>11.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Los Angeles</td>\n",
        "      <td>34.0522</td>\n",
-       "      <td>15.53</td>\n",
+       "      <td>-118.2437</td>\n",
+       "      <td>13.86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Montreal</td>\n",
        "      <td>45.5088</td>\n",
-       "      <td>-1.09</td>\n",
+       "      <td>-73.5878</td>\n",
+       "      <td>-1.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Mexico</td>\n",
        "      <td>15.0646</td>\n",
-       "      <td>25.84</td>\n",
+       "      <td>120.7198</td>\n",
+       "      <td>27.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Rome</td>\n",
        "      <td>34.2570</td>\n",
-       "      <td>11.44</td>\n",
+       "      <td>-85.1647</td>\n",
+       "      <td>10.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Helsinki</td>\n",
        "      <td>60.1695</td>\n",
-       "      <td>-7.45</td>\n",
+       "      <td>24.9355</td>\n",
+       "      <td>-7.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Berlin</td>\n",
        "      <td>52.5244</td>\n",
-       "      <td>4.18</td>\n",
+       "      <td>13.4105</td>\n",
+       "      <td>4.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Amsterdam</td>\n",
        "      <td>52.3740</td>\n",
-       "      <td>4.47</td>\n",
+       "      <td>4.8897</td>\n",
+       "      <td>4.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Antwerp</td>\n",
        "      <td>51.2199</td>\n",
-       "      <td>3.95</td>\n",
+       "      <td>4.4035</td>\n",
+       "      <td>3.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Athens</td>\n",
        "      <td>37.9795</td>\n",
-       "      <td>11.70</td>\n",
+       "      <td>23.7162</td>\n",
+       "      <td>11.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Atlanta</td>\n",
        "      <td>33.7490</td>\n",
-       "      <td>13.03</td>\n",
+       "      <td>-84.3880</td>\n",
+       "      <td>10.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Moscow</td>\n",
        "      <td>55.7522</td>\n",
-       "      <td>-3.76</td>\n",
+       "      <td>37.6156</td>\n",
+       "      <td>-4.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Munich</td>\n",
        "      <td>48.1374</td>\n",
-       "      <td>4.01</td>\n",
+       "      <td>11.5755</td>\n",
+       "      <td>4.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Tokyo</td>\n",
        "      <td>35.6895</td>\n",
-       "      <td>10.25</td>\n",
+       "      <td>139.6917</td>\n",
+       "      <td>12.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Melbourne</td>\n",
        "      <td>28.0836</td>\n",
-       "      <td>24.24</td>\n",
+       "      <td>-80.6081</td>\n",
+       "      <td>23.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Stockholm</td>\n",
        "      <td>59.3326</td>\n",
+       "      <td>18.0649</td>\n",
        "      <td>-0.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>St. Louis</td>\n",
        "      <td>38.6273</td>\n",
-       "      <td>3.78</td>\n",
+       "      <td>-90.1979</td>\n",
+       "      <td>3.09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           city      lat   temp\n",
-       "0        London  51.5085   5.31\n",
-       "1           Rio  38.3000   9.63\n",
-       "2       Beijing  39.9075   2.94\n",
-       "3        Sydney -33.8679  29.83\n",
-       "4     Barcelona  41.3888  10.76\n",
-       "5   Los Angeles  34.0522  15.53\n",
-       "6      Montreal  45.5088  -1.09\n",
-       "7        Mexico  15.0646  25.84\n",
-       "8          Rome  34.2570  11.44\n",
-       "9      Helsinki  60.1695  -7.45\n",
-       "10       Berlin  52.5244   4.18\n",
-       "11    Amsterdam  52.3740   4.47\n",
-       "12      Antwerp  51.2199   3.95\n",
-       "13       Athens  37.9795  11.70\n",
-       "14      Atlanta  33.7490  13.03\n",
-       "15       Moscow  55.7522  -3.76\n",
-       "16       Munich  48.1374   4.01\n",
-       "17        Tokyo  35.6895  10.25\n",
-       "18    Melbourne  28.0836  24.24\n",
-       "19    Stockholm  59.3326  -0.69\n",
-       "20    St. Louis  38.6273   3.78"
+       "           city      lat       lon   temp\n",
+       "0        London  51.5085   -0.1257   5.11\n",
+       "1           Rio  38.3000   21.7833   8.96\n",
+       "2       Beijing  39.9075  116.3972   5.94\n",
+       "3        Sydney -33.8679  151.2073  30.35\n",
+       "4     Barcelona  41.3888    2.1590  11.06\n",
+       "5   Los Angeles  34.0522 -118.2437  13.86\n",
+       "6      Montreal  45.5088  -73.5878  -1.68\n",
+       "7        Mexico  15.0646  120.7198  27.84\n",
+       "8          Rome  34.2570  -85.1647  10.46\n",
+       "9      Helsinki  60.1695   24.9355  -7.18\n",
+       "10       Berlin  52.5244   13.4105   4.31\n",
+       "11    Amsterdam  52.3740    4.8897   4.46\n",
+       "12      Antwerp  51.2199    4.4035   3.83\n",
+       "13       Athens  37.9795   23.7162  11.99\n",
+       "14      Atlanta  33.7490  -84.3880  10.84\n",
+       "15       Moscow  55.7522   37.6156  -4.04\n",
+       "16       Munich  48.1374   11.5755   4.12\n",
+       "17        Tokyo  35.6895  139.6917  12.23\n",
+       "18    Melbourne  28.0836  -80.6081  23.67\n",
+       "19    Stockholm  59.3326   18.0649  -0.69\n",
+       "20    St. Louis  38.6273  -90.1979   3.09"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,6 +434,7 @@
     "weather_dict = {\n",
     "    \"city\": cities,\n",
     "    \"lat\": lat,\n",
+    "    \"lon\": long,\n",
     "    \"temp\": temp\n",
     "}\n",
     "\n",
@@ -453,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
